[package]
name = "rssman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom_syndication = { version = "0.12.2", features = ["with-serde"] }
clap = { version = "4.3.19", features = ["derive", "cargo"] }
reqwest = { version = "0.11.18", features = ["native-tls"] }
rss = "2.0.5"
tokio = { version = "1.29.1", features = ["full"] }
