[package]
authors = ["VLPatton"]
name = "rssman"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom_syndication = { version = "0.12.2", features = ["with-serde"] }
clap = { version = "4.3.19", features = ["derive", "cargo"] }
reqwest = { version = "0.11.18", features = ["native-tls"] }
rss = "2.0.5"
serde = { version = "1.0.178", features = ["serde_derive"] }
serde_json = { version = "1.0.104", features = ["std"] }
tokio = { version = "1.29.1", features = ["full"] }
